# cookiecutter-py3-package

./: .gitignore  .pre-commit-config.yaml  .pyup.yml  CHANGELOG.md  CODE-OF-CONDUCT.md  CODE_OF_CONDUCT.md  CONTRIBUTING.rst  README.rst  appveyor.yml  cookiecutter.json  requirements_dev.txt  setup.cfg  setup.py  tox.ini  workspace.code-workspace-cookie.code-workspace
.github/workflows/: semantic_release.yaml  test_contribution.yaml  update-changelog-doc.yaml  update-changelog-repo.yaml
docs/: prompts.rst  requirements.txt  tutorial.rst
docs/source/: CHANGELOG-docs.md  CHANGELOG.md  README.rst  conf.py  console_script_setup.rst  extras.rst.txt  index.rst  prompts.rst  pypi_release_checklist.rst  todo.rst  travis_pypi_setup.rst  troubleshooting.rst  tutorial.rst
docs/source/how-to/: how-to-contribute.rst  how-to-how-to.rst  how-to-quickstart.rst  index-how-to.rst
docs/source/reference/: reference-project-inputs.rst
docs/source/tutorials/: index-tutorials.rst  quickstart.rst  tutorial-GH-protected-branches.rst  tutorial-PyPi.rst  tutorial-auto-changelog.rst  tutorial-codacy-setup.rst  (+8 more)
hooks/: post_gen_project.py  pre_gen_project.py
tests/: test_bake_project.py
{{cookiecutter.git_project_name}}/: .pyup.yml  CONTRIBUTING.rst  Makefile  README.rst  requirements_dev.txt  setup.py
{{cookiecutter.git_project_name}}/docs/: make.bat  requirements.txt
{{cookiecutter.git_project_name}}/tests/: test_{{cookiecutter.project_slug}}.py
{{cookiecutter.project_slug}}/: CONTRIBUTING.rst  MANIFEST.in  README.rst  requirements_dev.txt  setup.py  tox.ini
(+9 files in other folders)
