[bumpversion]
current_version = 0.5.10
commit = True
tag = True

[metadata]
description-file = README.rst

[bumpversion:file:setup.py]
search = version='{current_version}'
replace = version='{new_version}'

[semantic_release]
branch =  main
version_variable = setup.py:__version__,docs/source/conf.py:__version__

major_on_zero = false
upload_to_pypi = false
check_build_status = true

commit_subject = build(version): Bump to version-{version}.
